--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "dotenv": "^16.5.0",
     "typescript": "^5.8.3",
     "vite": "^6.2.6"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
